--- a/oo_Logica/Logica1/Roy.html
+++ b/oo_Logica/Logica1/Roy.html
@@ -10,7 +10,8 @@
     let idLinda = 12;
     let idGuaraciara = 15;
     let idPerola = 13;
-    document.write( (idLinda + idGuaraciara + idPerola) / 3);   
+    let totalId = idLinda + idGuaraciara + idPerola
+    document.write( totalId  / 3);   
     
 </script>
 </body>
