--- a/oo_Logica/Logica1/calcula_consumo.html
+++ b/oo_Logica/Logica1/calcula_consumo.html
@@ -17,14 +17,14 @@
     let consumoDeGasolina = caminhoComGasolina/tanque;
     
     document.write("Gasolina <br>")
-    document.write("O consumo da viagem de " + caminhoComGasolina + "km, com a capcidade do tanque de " + tanque + "foi de " + consumoDeGasolina + ". <br> <br>" )
+    document.write("O consumo da viagem de " + caminhoComGasolina + "km, com a capcidade do tanque de " + tanque + " L foi de " + consumoDeGasolina + ". <br> <br>" )
 
     //alcool
-    let caminhoComAlcool = 480;
+    let caminhoComAlcool = 300;
     let consumoDeAlcool = caminhoComAlcool/tanque;
 
     document.write("Alcool <br>")
-    document.write("O consumo da viagem de " + caminhoComAlcool + "km, com a capcidade do tanque de " + tanque + "foi de " + consumoDeAlcool + ". <br> <br>" )
+    document.write("O consumo da viagem de " + caminhoComAlcool + "km, com a capcidade do tanque de " + tanque + " L foi de " + consumoDeAlcool + ". <br> <br>" )
 
 </script>
 
