--- a/oo_Logica/Logica1/mostra_idades2.html
+++ b/oo_Logica/Logica1/mostra_idades2.html
@@ -18,13 +18,13 @@
 
         let anoAtual = 2021;
         //idade ana
-        exibe("<big>" + "Ana nasceu em " + "</big>" (anoAtual - 25));
+        exibe( " <big>Ana</big> nasceu em " +  (anoAtual - 25));
 
         //idade maria
-        exibe("Maria nasceu em " + (anoAtual - 33));
+        exibe("<big>Maria</big> nasceu em " + (anoAtual - 33));
 
         //idade jose
-        exibe("Jose nasceu em " + (anoAtual - 54));
+        exibe("<big>Jose</big>nasceu em " + (anoAtual - 54));
 
     </script>
     
