--- a/oo_Logica/Logica1/helloWorld.html
+++ b/oo_Logica/Logica1/helloWorld.html
@@ -9,8 +9,39 @@
     <h1>Hello World, Oracle One!</h1>
     <br>OracleOnde & Alura <a href="https://www.alura.com.br/oracle-next-education">aqui</a>!
 
+
 <script>
-    alert("Hello World, Oracle One!");
+    function pulaLinha() {
+
+        document.write("<br>");
+    }
+
+    function mostra(frase) {
+        document.write(frase);
+        pulaLinha();
+    }
+
+    function a(texto) {
+
+        return "(" + texto + ")";
+    }
+
+    function b(texto) {
+
+        return "@" + texto + "@";
+    }
+
+    function c(nome, sobrenome) {
+
+        return b(nome + " " + a(sobrenome));
+
+    }
+
+    var resultado = c("Flávio", "Almeida");
+
+    mostra(resultado);
+
+
 </script>
 </body>
 </html>
