--- a/oo_Logica/Logica1/futebol.html
+++ b/oo_Logica/Logica1/futebol.html
@@ -15,15 +15,14 @@
             pulaLi();
         }
 
+        //parseInt
+        
         var vitorias = parseInt(prompt("Digite o número de vitórias: "));
         var empates = parseInt(prompt("Digite o número de empates: "));
 
         var pontos = (vitorias * 3) + (empates *1);
 
-        exibe("Pontos do seu time: " + pontos)
-
-
-
+        exibe("Pontos do seu time: " + pontos);
 
     </script>
 </body>
