--- a/oo_Logica/Logica1/futebol.html
+++ b/oo_Logica/Logica1/futebol.html
@@ -16,13 +16,25 @@
         }
 
         //parseInt
-        
+
         var vitorias = parseInt(prompt("Digite o número de vitórias: "));
         var empates = parseInt(prompt("Digite o número de empates: "));
 
         var pontos = (vitorias * 3) + (empates *1);
 
         exibe("Pontos do seu time: " + pontos);
+
+        var pontosPassado = 28;
+
+        if (pontos > pontosPassado){
+            exibe("Seu time está melhor que ano passado.");
+        }
+        if (pontos == pontosPassado){
+            exibe("Seu time está na mesma.");
+        }
+        if (pontos < pontosPassado) {
+            exibe("Seu time está pior que ano passado.");  
+        }
 
     </script>
 </body>
