--- a/oo_Logica/Logica1/futebol.html
+++ b/oo_Logica/Logica1/futebol.html
@@ -24,7 +24,7 @@
 
         exibe("Pontos do seu time: " + pontos);
 
-        var pontosPassado = 28;
+        var pontosPassado = 28; //pontos no ultimo ano
 
         if (pontos > pontosPassado){
             exibe("Seu time está melhor que ano passado.");
@@ -35,6 +35,8 @@
         if (pontos < pontosPassado) {
             exibe("Seu time está pior que ano passado.");  
         }
+
+        exibe("Fim de execução.")
 
     </script>
 </body>
