--- a/oo_Logica/Logica1/jogo_adivinha3.html
+++ b/oo_Logica/Logica1/jogo_adivinha3.html
@@ -32,10 +32,11 @@
             var chute = parseInt(prompt("Digite seu chute: "));
 
             if (chute == numeroPensado){
-                 exibe("Gol");
+                 exibe( "GOL, o número era o" + numeroPensado );
+                 break;
              }
             else {
-                 exibe("Fora");
+                 exibe("Fora, chorou...");
             }
 
             tentativa++;
