--- a/oo_Logica/Logica1/jogo_adivinha4.html
+++ b/oo_Logica/Logica1/jogo_adivinha4.html
@@ -11,9 +11,11 @@
     <button>Compare com o meu segredo</button>
 
     <script>
-        var segredo = 5;
+        var segredo = Math.round(Math.random()*10);
 
         var input = document.querySelector("input");
+
+        input.focus();
 
         function verifica() {
 
@@ -24,9 +26,10 @@
 
             alert("Fora!");
             }
-
+            input.value = "";
+            input.focus();
         }
-        var button = document.querySelector("button");
+         var button = document.querySelector("button");
 
          button.onclick = verifica;
 
