--- a/oo_Logica/Logica2/programa.html
+++ b/oo_Logica/Logica2/programa.html
@@ -43,10 +43,17 @@
     pincel.lineTo(400,0);
     pincel.fill();
 
-    
+    //bolinha1
+    pincel.fillStyle = 'white';
+    pincel.beginPath();
+    pincel.arc( 300,200, 80,0, 2*3.14);
+    pincel.fill();
 
-
-
+    //bolinha2
+     pincel.fillStyle = 'black';
+    pincel.beginPath();
+    pincel.arc( 300,200, 30,0, 2*3.14);
+    pincel.fill();
 
 </script>
 
