--- a/oo_Logica/Logica2/triangulo2.html
+++ b/oo_Logica/Logica2/triangulo2.html
@@ -15,34 +15,21 @@
 
     var pincel = tela.getContext('2d');
 
-    function desenhaEsquadro(xa, ya, xc, yc, cor) {
+    function desenhaEsquadro(xa, ya, xb, yb, cor) {
         
         pincel.beginPath();
         pincel.moveTo(xa,ya);
         pincel.lineTo(xa,yb);
         pincel.lineTo(xb,yb);
         pincel.fill();
-        pincel.fillStyle = 'red';
+        pincel.fillStyle = cor;//cor[i];
 }
 
-    //triangulo 1(xa, ya, xc, yc, cor)
-    pincel.fillStyle = 'red';
-    pincel.beginPath();
-    pincel.moveTo(xa,ya);
-    pincel.lineTo(xa,yb);
-    pincel.lineTo(xb,yb);
-    pincel.fill();
-/*
-    //triangulo 2
-    pincel.fillStyle = 'pink';
-    pincel.beginPath();
-    pincel.moveTo(100,175);
-    pincel.lineTo(100,350);
-    pincel.lineTo(275,350);
-    pincel.fill();
+//cor = [ 'blue', 'green'];
+desenhaEsquadro(50, 50, 400, 400, 'blue')//cor[i];
+desenhaEsquadro(100, 175, 275, 350, 'red')//cor[i];
 
-   
-    */
+    
 </script>
 
 
