--- a/oo_Logica/Logica2/Rita.html
+++ b/oo_Logica/Logica2/Rita.html
@@ -12,40 +12,35 @@
 
     var tela = document.querySelector('canvas');
     var pincel = tela.getContext('2d');
-
     pincel.fillStyle = 'lightgray';
     pincel.fillRect(0, 0, 600, 400);
 
-    //cor da bolinha
-    var cor = 'blue'; 
+    function desenhaCirculo(x, y, raio) {
 
-    function desenhaCirculo(x, y, raio, cor) {
-
-        pincel.fillStyle = cor;
+        pincel.fillStyle = 'blue';
         pincel.beginPath();
-        pincel.arc(x, y, raio, 0, 2 * Math.PI);//math.pi
+        pincel.arc(x, y, raio, 0, 2 * Math.PI);
         pincel.fill();
     }
 
-    function limpaTela(){
-        pincel.clearRect(0,0,600,400);//limpa
+    function limpaTela() {
+
+        pincel.clearRect(0, 0, 600, 400);
     }
 
-    //atribui start de x
-    var x = 20;
+    var x = 20;//faltou informar o valor inicial da variavel fora da funcao
 
-    function updateTela(){
+    function atualizaTela() {
 
         limpaTela();
-        desenhaCirculo(x,20,10,cor);
+        desenhaCirculo(x, 20, 10);
         x++;
+
     }
 
-    setInterval(updateTela, 10);//1000 = 1s
-
-      
+    setInterval(atualizaTela, 10);
 
 </script>
-
 </body>
 </html>
+
