--- a/oo_Logica/Logica2/Herculano.html
+++ b/oo_Logica/Logica2/Herculano.html
@@ -40,6 +40,7 @@
     }
 
     setInterval(atualizaTela, 10);//chama a funcao sem parametros
+    //Quando queremos passar uma função como parâmetro para outra, precisamos omitir seu ()
 
 </script>
 
