--- a/oo_Logica/Logica2/joguinho1.html
+++ b/oo_Logica/Logica2/joguinho1.html
@@ -6,63 +6,93 @@
     <title>Joguinho</title>
 </head>
 <body>
+
+    <!--tela-->
     <canvas width="600" height="400"></canvas>
 
 <script>
 
-    var tela = document.querySelector('canvas');
-    var pincel = tela.getContext('2d');
+//tela+pincel
+var tela = document.querySelector('canvas');
+var pincel = tela.getContext('2d');
 
-    pincel.fillStyle = 'lightgray';
-    pincel.fillRect(0, 0, 600, 400);
+//cor e tamanho da tela de fundo
+pincel.fillStyle = 'lightgray';
+pincel.fillRect(0, 0, 600, 400);
 
-    function desenhaCirculo(x, y, raio) {
+//(x,y,raio)
+var raio = 10;
+var xAleatorio;
+var yAleatorio;
 
-        pincel.fillStyle = 'blue';
-        pincel.beginPath();
-        pincel.arc(x, y, raio, 0, 2 * Math.PI);
-        pincel.fill();
 
-    }
-    function desenhaCirculo(x, y, raio, cor) {
+//desenha um circulo individualmente
+function desenhaCirculo(x, y, raio, cor) {
 
-        pincel.fillStyle = cor;
-        pincel.beginPath();
-        pincel.arc(x, y, raio, 0, 2 * Math.PI);
-        pincel.fill();
+    pincel.fillStyle = cor;
+    pincel.beginPath();
+    pincel.arc(x, y, raio, 0, 2 * Math.PI);
+    pincel.fill();
+
 }
 
-    function limpaTela() {
 
-        pincel.clearRect(0, 0, 600, 400);
-    }
+//clear
+function limpaTela() {
 
-    var raio = 10;
+    pincel.clearRect(0, 0, 600, 400);
 
-    function desenhaAlvo(x, y){
-        desenhaCirculo(x, y, raio+20, 'red');
-        desenhaCirculo(x, y, raio+10, 'white');
-        desenhaCirculo(x, y, raio, 'red');
+}
 
-    }
+//tres circunferencias = alvo
+function desenhaAlvo(x,y) {
 
-    function randomAlvo(maximo){
-        return Math.floor(Math.random() * maximo)
-    }
-    function atualizaTela(){
+    desenhaCirculo(x, y, raio+20, 'red');
+    desenhaCirculo(x, y, raio+10, 'white');
+    desenhaCirculo(x, y, raio, 'red');
+
+}
+
+//random sortear x,y
+function sorteiaPosicao(maximo) {
+
+    return Math.floor(Math.random() * maximo);
+
+}
+
+//gerar nova tela, alvo em nova posicao
+    function atualizaTela() {
+        limpaTela();
+        xAleatorio = sorteiaPosicao(600);
+        yAleatorio = sorteiaPosicao(400);
+        desenhaAlvo(xAleatorio, yAleatorio);
+   }
+
+//intervalo exibição do alvo
+setInterval(atualizaTela, 1000);
+
+function dispara(evento) {
     
-    limpaTela();
-    
-    var xAleatorio = randomAlvo(600);
-    var yAleatorio = randomAlvo(400);
+    var x = evento.pageX - tela.offsetLeft;
+    var y = evento.pageY - tela.offsetTop;
 
-    desenhaAlvo(xAleatorio,yAleatorio);  
+    if((x > xAleatorio - raio)
+    && (x < xAleatorio + raio)
+    && (y > yAleatorio - raio)
+    && (y < yAleatorio + raio)) {
+
+        alert('Acertou!');
 
     }
 
-    setInterval(atualizaTela, 500);
 
+}
+
+//verifica o tiro   
+tela.onclick = dispara;
 
 </script>
+
+
 </body>
 </html>
