--- a/oo_HtmlCss_1/index.html
+++ b/oo_HtmlCss_1/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html lang="pt-Br">
+<!DOCTYPE html><!--Tag de informação: versão do hmtl(ultima)-->
+<html lang="pt-Br"> <!--Tag estrutura + Config idioma-->
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> <!--Character set(Config teclado)-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Html5 & Css3 [1]</title>
+    <title>Barbearia Alura {Html5 & Css3 [1]}</title>
 </head>
 
 <header>
 
-    <h1>Sobre a Barbearia Alura</h1>
+    <h1>Sobre a Barbearia Alura</h1><!--Tag de conteudo, h1->h6-->
 
 </header>
 
