--- a/oo_HtmlCss_1/index.html
+++ b/oo_HtmlCss_1/index.html
@@ -5,29 +5,23 @@
     <meta charset="UTF-8"> <!--Character set(Config teclado)-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura {Html5 & Css3 [1]}</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <header>
-
-    <h1>Sobre a Barbearia Alura</h1><!--Tag de conteudo, h1->h6-->
+    <!--CSS inline-->
+    <h1 style="text-align: center;">Sobre a Barbearia Alura</h1><!--Tag de conteudo, h1->h6-->
 
 </header>
+
+    
+<body>
 
     <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
     <p><en>Nossa  missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></en></p>
 
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-
-<body>
-
-    
-
-
-
-
-
-
 
 </body>
 
