--- a/oo_HtmlCss_2/produtos.html
+++ b/oo_HtmlCss_2/produtos.html
@@ -9,9 +9,16 @@
 
 <body>
     <header>
-
-    </header>
+        <h1><img src="logo.png" alt="Logo"></h1>
     
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
