--- a/oo_HtmlCss_2/produtos.html
+++ b/oo_HtmlCss_2/produtos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Barbearia Alura: Produtos {Html5 & Css3 [2]}</title>
+
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="produtos.css">
 </head>
 
