--- a/oo_HtmlCss_2/produtos.html
+++ b/oo_HtmlCss_2/produtos.html
@@ -22,8 +22,31 @@
             </nav>
         </div>             
     </header>
+    <main>
+        <ul class="produtos">
+            <li>
+               <h2>Cabelo</h2> 
+               <img src="cabelo.jpg" alt="Cabelo">
+               <p class="descricao">Na tesoura ou máquina, como o clint preferir.</p>
+               <p class="preco">R$ 35,00</p>
+            </li>
+            <li>               
+                <h2>Barba</h2> 
+                <img src="barba.jpg" alt="Barba">
+                <p class="descricao">Corte de desenho e barba.</p>
+                <p class="preco">R$ 20,00</p>
+            </li>
+            <li>               
+                <h2>Cabelo + Barba</h2> 
+                <img src="cabelo+barba.jpg" alt="Cabelo + Barba">
+                <p class="descricao">Pacote completo de cabelo e barba.</p>
+                <p class="preco">R$ 45,00</p>
+            </li>
+        </ul>
 
-    
+    </main>
+
+
 </body>
 
 </html>
