--- a/oo_HtmlCss_2/produtos.html
+++ b/oo_HtmlCss_2/produtos.html
@@ -43,8 +43,11 @@
                 <p class="preco">R$ 45,00</p>
             </li>
         </ul>
-
     </main>
+    <footer>
+        <img src="logo-branco.png" alt="Logo">
+        <p>&copy; Barbearia alura 2020</p>
+    </footer>
 
 
 </body>
