--- a/oo_HtmlCss_2/produtos.html
+++ b/oo_HtmlCss_2/produtos.html
@@ -46,7 +46,7 @@
     </main>
     <footer>
         <img src="logo-branco.png" alt="Logo">
-        <p>&copy; Barbearia alura 2020</p>
+        <p class="copy">&copy; Barbearia alura 2020</p><!--unicode-->
     </footer>
 
 
