--- a/oo_JavaScript/index.html
+++ b/oo_JavaScript/index.html
@@ -12,7 +12,7 @@
 
 		<header>
 			<div class="container">
-				<h1>Welfare Company</h1>
+				<h1 class="titulo">Welfare Company</h1>
 			</div>
 		</header>
 		<main>
