--- a/oo_JavaScript/index.html
+++ b/oo_JavaScript/index.html
@@ -69,7 +69,30 @@
 						</tr>
 					</tbody>
 				</table>
+			</section>
+			<!--add new user -->
+			<section class="container">
+				<h2 id="titulo-form">Add</h2>
+				<form>
+					<div class="grupo">
+						<label for="nome">Name:</label>
+						<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
+					</div>
+					<div class="grupo">
+						<label for="peso">Weight(kg):</label>
+						<input id="peso" name="peso" type="text" placeholder="digite o peso do seu paciente" class="campo campo-medio">
+					</div>
+					<div class="grupo">
+						<label for="altura">Height(m):</label>
+						<input id="altura" name="altura" type="text" placeholder="digite a altura do seu paciente" class="campo campo-medio">
+					</div>
+					<div class="grupo">
+						<label for="gordura">Body fat(%):</label>
+						<input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
+					</div>
 
+					<button id="adicionar-paciente" class="botao bto-principal">Add</button>
+				</form>
 			</section>
 		</main>
 	<script src="welfare.js"></script>
