--- a/oo_JavaScript/index.html
+++ b/oo_JavaScript/index.html
@@ -73,7 +73,7 @@
 			<!--add new user -->
 			<section class="container">
 				<h2 id="titulo-form">Add</h2>
-				<form>
+				<form id="form-adiciona">
 					<div class="grupo">
 						<label for="nome">Name:</label>
 						<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
