changes files and folders

--- a/oo_JavaScript/index.html
+++ b/oo_JavaScript/index.html
@@ -28,6 +28,7 @@
 							<th>BMI</th>
 						</tr>
 					</thead>
+					<!--tabela pacientes (incial = 5)-->
 					<tbody id="tabela-pacientes">
 						<tr class="paciente" id="primeiroPaciente">
 							<td class="info-nome">Paulo</td>
@@ -90,11 +91,11 @@
 						<label for="gordura">Body fat(%):</label>
 						<input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
 					</div>
-
 					<button id="adicionar-paciente" class="botao bto-principal">Add</button>
 				</form>
 			</section>
 		</main>
-	<script src="welfare.js"></script>
+	<script src="./assets/js/principal.js"></script>
+	<script src="./assets/js/form.js"></script>
 	</body>
 </html>
