--- a/oo_JavaScript/projeto/index.html
+++ b/oo_JavaScript/projeto/index.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<section class="container">
-				<h2>Users monitoring</h2>
+				<h2>Users</h2>
 				<table>
 					<thead>
 						<tr>
