--- a/oo_JavaScript/projeto/index.html
+++ b/oo_JavaScript/projeto/index.html
@@ -74,7 +74,7 @@
 			<!--add new user -->
 			<section class="container">
 				<h2 id="titulo-form">Add</h2>
-				<ul id="mensagem-erro-1"></ul>
+				<ul id="mensagens-erro"></ul>
 				<form id="form-adiciona">
 					<div class="grupo">
 						<label for="nome">Name:</label>
