--- a/oo_JavaScript/projeto/index.html
+++ b/oo_JavaScript/projeto/index.html
@@ -30,7 +30,7 @@
 					</thead>
 					<!--tabela pacientes (incial = 5)-->
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" id="primeiroPaciente">
+						<tr class="paciente">
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -98,5 +98,6 @@
 		</main>
 	<script src="./assets/js/principal.js"></script>
 	<script src="./assets/js/form.js"></script>
+	<script src="./assets/js/remove.js"></script>
 	</body>
 </html>
