--- a/oo_JavaScript/projeto/index.html
+++ b/oo_JavaScript/projeto/index.html
@@ -17,6 +17,9 @@
 		<main>
 			<section class="container">
 				<h2>Users</h2>
+				<label for="filtrar-tabela">Search: </label>
+				<input type="text" name="filtro" value="" id="filtrar-tabela" placeholder="name...">
+
 				<table>
 					<thead>
 						<tr>
@@ -98,5 +101,6 @@
 	<script src="./assets/js/principal.js"></script>
 	<script src="./assets/js/form.js"></script>
 	<script src="./assets/js/remove.js"></script>
+	<script src="./assets/js/filter.js"></script>
 	</body>
 </html>
