--- a/oo_JavaScript/projeto/index.html
+++ b/oo_JavaScript/projeto/index.html
@@ -96,11 +96,13 @@
 					</div>
 					<button id="adicionar-paciente" class="botao bto-principal">Add</button>
 				</form>
+				<button id="buscar-paciente" class="botao bto-principal">Search</button>
 			</section>
 		</main>
 	<script src="./assets/js/principal.js"></script>
 	<script src="./assets/js/form.js"></script>
 	<script src="./assets/js/remove.js"></script>
 	<script src="./assets/js/filter.js"></script>
+	<script src="./assets/js/search.js"></script>
 	</body>
 </html>
