--- a/oo_JavaScript/projeto/index.html
+++ b/oo_JavaScript/projeto/index.html
@@ -19,7 +19,7 @@
 				<h2>Users</h2>
 				<label for="filtrar-tabela">Search: </label>
 				<input type="text" name="filtro" value="" id="filtrar-tabela" placeholder="name...">
-
+				
 				<table>
 					<thead>
 						<tr>
@@ -72,6 +72,7 @@
 					</tbody>
 				</table>
 				<button id="buscar-paciente" class="botao bto-principal">Search</button>
+				<span id="erro-ajax" class="invisivel" >Erro ao buscar pacientes</span>
 			</section>
 			
 			<!--add new user -->
