--- a/oo_HtmlCss_3/contato.html
+++ b/oo_HtmlCss_3/contato.html
@@ -23,12 +23,24 @@
         </div>             
     </header>
     <main>
-        ...
+        <form action="">
+            <label for="nome-sobrenome">Nome e sobrenome<label>
+            <input type="text" id="nome-sobrenome">
+
+            <label for="email">E-mail</label>
+            <input type="text" id="email">
+
+            <label for="telefone">Telefone</label>
+            <input type="text" id="telefone">
+
+            
+            <input type="submit" value="Enivar Formulário">
+        </form>
     </main>
 
     <footer>
         <img src="logo-branco.png" alt="Logo">
-        <p class="copy">&copy; Barbearia alura 2020</p><!--unicode-->
+        <p class="copy">&copy; Barbearia Alura 2020</p><!--unicode-->
     </footer>
 </body>
 
