--- a/oo_HtmlCss_3/contato.html
+++ b/oo_HtmlCss_3/contato.html
@@ -33,6 +33,7 @@
             <label for="telefone">Telefone</label>
             <input type="text" id="telefone">
 
+            <textarea name="" id="" cols="30" rows="10"></textarea>
             
             <input type="submit" value="Enivar Formulário">
         </form>
