--- a/oo_HtmlCss_3/contato.html
+++ b/oo_HtmlCss_3/contato.html
@@ -33,9 +33,20 @@
             <label for="telefone">Telefone</label>
             <input type="text" id="telefone">
 
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            
-            <input type="submit" value="Enivar Formulário">
+            <label for="mensagem">Mensagem</label>
+            <textarea name="" id="mensagem" cols="30" rows="10"></textarea>
+
+           <label for="radio-email">E-mail</label> 
+           <input type="radio" value="Email" id="radio-email">
+
+           <label for="radio-telefone">Telefone</label> 
+           <input type="radio" value="telefone" id="radio-telefone">
+
+           <label for="radio-whatsapp">Whatsapp</label> 
+           <input type="radio" value="Whatsapp" id="radio-whatsapp">
+
+
+           <input type="submit" value="Enivar Formulário">
         </form>
     </main>
 
