--- a/oo_HtmlCss_3/contato.html
+++ b/oo_HtmlCss_3/contato.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Barbearia Alura: Contato {Html5 & Css3 [3]}</title>
-
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="contato.css">
 </head>
@@ -28,10 +27,10 @@
             <input type="text" id="nome-sobrenome" class="input-padrao">
 
             <label for="email">E-mail</label>
-            <input type="text" id="email" class="input-padrao">
+            <input type="email" id="email" class="input-padrao">
 
             <label for="telefone">Telefone</label>
-            <input type="text"  id="telefone" class="input-padrao">
+            <input type="tel"  id="telefone" class="input-padrao">
 
             <label for="mensagem">Mensagem</label>
             <textarea name="" id="mensagem" cols="30" rows="10" class="input-padrao"></textarea>
@@ -44,7 +43,6 @@
                 
                 <label for="radio-whatsapp"><input type="radio" value="Whatsapp" name="contato" id="radio-whatsapp">Whatsapp</label>              
             </div>
-
             <div>
                 <p>Qual horário prefere ser atendido?</p>
                 <select name="" id="">
@@ -59,11 +57,9 @@
             <input type="submit" value="Enviar Formulário">
         </form>
     </main>
-
     <footer>
         <img src="logo-branco.png" alt="Logo">
         <p class="copy">&copy; Barbearia Alura 2020</p><!--unicode-->
     </footer>
 </body>
-
 </html>
