--- a/oo_HtmlCss_3/contato.html
+++ b/oo_HtmlCss_3/contato.html
@@ -54,7 +54,7 @@
 
             <label for=""><input type="checkbox" class="checkbox" checked>Gostaria de recever nossas novidades por email?</label>
 
-            <input type="submit" value="Enviar Formulário">
+            <input type="submit" value="Enviar Formulário" class="enviar">
         </form>
     </main>
     <footer>
