--- a/oo_HtmlCss_3/contato.html
+++ b/oo_HtmlCss_3/contato.html
@@ -56,6 +56,26 @@
 
             <input type="submit" value="Enviar Formulário" class="enviar">
         </form>
+
+        <table>
+            <tr>
+                <td>Data</td>
+                <td>Horário</td>
+            </tr>
+            <tr>
+                <td>Segunda</td>
+                <td>8h-12h</td>
+            </tr>
+            <tr>
+                <td>Quarta</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Sexta</td>
+                <td>8h-12h</td>
+            </tr>
+        </table>
+
     </main>
     <footer>
         <img src="logo-branco.png" alt="Logo">
