--- a/oo_HtmlCss_3/contato.html
+++ b/oo_HtmlCss_3/contato.html
@@ -58,22 +58,24 @@
         </form>
 
         <table>
-            <tr>
-                <td>Data</td>
-                <td>Horário</td>
-            </tr>
-            <tr>
-                <td>Segunda</td>
-                <td>8h-12h</td>
-            </tr>
-            <tr>
-                <td>Quarta</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Sexta</td>
-                <td>8h-12h</td>
-            </tr>
+            <thead>
+                <th>Data</th>
+                <th>Horário</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Segunda</td>
+                    <td>8h-12h</td>
+                </tr>
+                <tr>
+                    <td>Quarta</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Sexta</td>
+                    <td>8h-12h</td>
+                </tr>
+            </tbody>
         </table>
 
     </main>
