--- a/oo_HtmlCss_3/contato.html
+++ b/oo_HtmlCss_3/contato.html
@@ -69,13 +69,18 @@
                 </tr>
                 <tr>
                     <td>Quarta</td>
-                    <td></td>
+                    <td>14h-20h</td>
                 </tr>
                 <tr>
                     <td>Sexta</td>
                     <td>8h-12h</td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="5">Agende seu atendimento!</td> 
+                </tr>
+            </tfoot>
         </table>
 
     </main>
