--- a/oo_HtmlCss_4/index.html
+++ b/oo_HtmlCss_4/index.html
@@ -27,6 +27,8 @@
 		<main>
 		<section class="principal">
 			<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+
+			<img class="utensilios" src="utensilios.jpg" alt="Utensílios de um barbeiro">
 	 
 			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
