--- a/oo_HtmlCss_4/index.html
+++ b/oo_HtmlCss_4/index.html
@@ -6,6 +6,10 @@
 
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
+		<!--Fonts-->
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;1,300&display=swap" rel="stylesheet"> 
+
 	</head>
 
 	<body>
