--- a/oo_HtmlCss_4/index.html
+++ b/oo_HtmlCss_4/index.html
@@ -45,8 +45,9 @@
 			<h3 class="titulo-principal">Nosso Estabelecimento</h3>
 			<p>Nosso estabelecimento esta localizado no coração da cidade.</p>
 			<!--Maps-->
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4484611390453!2d-46.63465338568304!3d-23.58824428466948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2suy!4v1616184901971!5m2!1spt-BR!2suy" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
+			<div class="mapa-conteudo">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4484611390453!2d-46.63465338568304!3d-23.58824428466948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2suy!4v1616184901971!5m2!1spt-BR!2suy" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+			</div>
 		</section>
 
 		<section class="beneficios">
