--- a/oo_JQuery/alura-typer/public/principal.html
+++ b/oo_JQuery/alura-typer/public/principal.html
@@ -5,6 +5,15 @@
     <title>Alura Typer</title>
 </head>
 <body>
-    <!-- Seja bem vindo ao curso de jQuery :) -->
+    <h1>Alura Typer</h1>
+    <p class="frase">Lorem ipsum dolor sit amet?</p>
+
+    <ul class="informacoes">
+        <li>30 palavras</li>
+        <li>10 segundos</li>
+    </ul>
+  
 </body>
+<script src="js/jquery.js"></script> <!--conferir no source--> 
+<script src="js/main.js"></script>
 </html>
