--- a/oo_JQuery/alura-typer/public/principal.html
+++ b/oo_JQuery/alura-typer/public/principal.html
@@ -9,10 +9,10 @@
     <p class="frase">Lorem ipsum dolor sit amet?</p>
 
     <ul class="informacoes">
-        <li>30 palavras</li>
+        <li> <span id="tamanho-frase-tela"> 0 </span> palavras</li>
         <li>10 segundos</li>
     </ul>
-  
+     
 </body>
 <script src="js/jquery.js"></script> <!--conferir no source--> 
 <script src="js/main.js"></script>
