--- a/oo_JQuery/alura-typer/public/principal.html
+++ b/oo_JQuery/alura-typer/public/principal.html
@@ -9,8 +9,15 @@
     <p class="frase">Lorem ipsum dolor sit amet?</p>
 
     <ul class="informacoes">
-        <li> <span id="tamanho-frase-tela"> 0 </span> palavras</li>
+        <li> <span id="tamanho-frase"> 0 </span> palavras</li>
         <li>10 segundos</li>
+    </ul>
+
+    <textarea class="campo-digitacao" cols="40" rows="10"></textarea>
+
+    <ul>
+        <li> <span id="contador-caracteres"> 0 </span> caracteres</li>
+        <li> <span id="contador-palavras"> 0 </span> palavras</li>
     </ul>
      
 </body>
