--- a/#ImersaoDev/Calculator/index.html
+++ b/#ImersaoDev/Calculator/index.html
@@ -14,12 +14,35 @@
         <h1 class="page-title">Calculator</h1>
         <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-calculadora.svg" class="page-logo"
             alt="">
-        <div class="calculadora"></div>
+        <div class="calculadora">
+            <form action="">
+                <h2></h2>
+            </form>
+            <div class="keyboard">
+                <input type="button" class='calc-btn' onclick="erase()" value="">
+                <input type="button" class='calc-btn' onclick="addParameter(1)" value="1">
+                <input type="button" class='calc-btn' onclick="addParameter(2)" value="2">
+                <input type="button" class='calc-btn' onclick="addParameter(3)" value="3">
+                <input type="button" class='calc-btn' onclick="addParameter(4)" value="4">
+                <input type="button" class='calc-btn' onclick="addParameter(5)" value="5">
+                <input type="button" class='calc-btn' onclick="addParameter(6)" value="6">
+                <input type="button" class='calc-btn' onclick="addParameter(7)" value="7">
+                <input type="button" class='calc-btn' onclick="addParameter(8)" value="8">
+                <input type="button" class='calc-btn' onclick="addParameter(9)" value="9">
+                <input type="button" class='calc-btn' onclick="addParameter(0)" value="0">
+                <input type="button" class='calc-btn' onclick="addParameter('.')" value=".">
+                <input type="button" class='calc-btn' onclick="addParameter('-')" value="-">
+                <input type="button" class='calc-btn' onclick="addParameter('+')" value="+">
+                <input type="button" class='calc-btn' onclick="addParameter('/')" value="÷">
+                <input type="button" class='calc-btn' onclick="addParameter('*')" value="x">
+                <input type="button" class='calc-btn-res' onclick="addEqual()" value="=">
+            </div>
+        </div>
     </div>
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
     </a>
-    <h2></h2>
+    
 </body>
 
 </html>
