--- a/#ImersaoDev/Calculator/index.html
+++ b/#ImersaoDev/Calculator/index.html
@@ -22,20 +22,20 @@
                 
                     <div class="half1">
                         <div class="n1-9">
-                            <input type="button" class='calc-btn' onclick="addParameter(1)" value="1">
-                            <input type="button" class='calc-btn' onclick="addParameter(2)" value="2">
-                            <input type="button" class='calc-btn' onclick="addParameter(3)" value="3">
-                            <input type="button" class='calc-btn' onclick="addParameter(4)" value="4">
-                            <input type="button" class='calc-btn' onclick="addParameter(5)" value="5">
-                            <input type="button" class='calc-btn' onclick="addParameter(6)" value="6">
-                            <input type="button" class='calc-btn' onclick="addParameter(7)" value="7">
-                            <input type="button" class='calc-btn' onclick="addParameter(8)" value="8">
-                            <input type="button" class='calc-btn' onclick="addParameter(9)" value="9">
+                            <input type="button" class='calc-btn' onclick="addNumber(1)" value="1">
+                            <input type="button" class='calc-btn' onclick="addNumber(2)" value="2">
+                            <input type="button" class='calc-btn' onclick="addNumber(3)" value="3">
+                            <input type="button" class='calc-btn' onclick="addNumber(4)" value="4">
+                            <input type="button" class='calc-btn' onclick="addNumber(5)" value="5">
+                            <input type="button" class='calc-btn' onclick="addNumber(6)" value="6">
+                            <input type="button" class='calc-btn' onclick="addNumber(7)" value="7">
+                            <input type="button" class='calc-btn' onclick="addNumber(8)" value="8">
+                            <input type="button" class='calc-btn' onclick="addNumber(9)" value="9">
                         </div>
                         <div class="n0">                   
                             
-                            <input type="button" class='calc-btn' onclick="addParameter(0)" value="0">
-                            <input type="button" class='calc-btn' onclick="addParameter('.')" value=".">
+                            <input type="button" class='calc-btn' onclick="addNumber(0)" value="0">
+                            <input type="button" class='calc-btn' onclick="addNumber('.')" value=".">
                         </div>
                     </div>
                     <div class="half2">
