--- a/oo_JQuery/alura-typer/public/principal.html
+++ b/oo_JQuery/alura-typer/public/principal.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Alura Typer</title>
+    <link rel="stylesheet" href="css/libs/materialize.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Alura Typer</h1>
-    <p class="frase">Lorem ipsum dolor sit amet?</p>
+    <div class="container">
+        <h1 class="center">Alura Typer</h1>
+        <p class="frase center">Lorem ipsum dolor sit amet?</p>
 
-    <ul class="informacoes">
-        <li> <span id="tamanho-frase"> 0 </span> palavras</li>
-        <li><span id="tempo-digitacao">10</span> segundos</li>
-    </ul>
+        <ul class="informacoes center">
+            <li> <span id="tamanho-frase"> 0 </span> palavras</li>
+            <li><span id="tempo-digitacao">10</span> segundos</li>
+        </ul>
 
-    <textarea class="campo-digitacao" cols="40" rows="10"></textarea>
-    <button id="botao-reiniciar">Reiniciar Jogo</button>
+        <textarea class="campo-digitacao" cols="40" rows="10"></textarea>
+        <button id="botao-reiniciar">Reiniciar Jogo</button>
 
-    <ul>
-        <li> <span id="contador-caracteres"> 0 </span> caracteres</li>
-        <li> <span id="contador-palavras"> 0 </span> palavras</li>
-    </ul>
+        <ul class="center"> 
+            <li> <span id="contador-caracteres"> 0 </span> caracteres</li>
+            <li> <span id="contador-palavras"> 0 </span> palavras</li>
+        </ul>
+    </div>
+    
      
 </body>
 <script src="js/jquery.js"></script> <!--conferir no source--> 
