--- a/oo_JQuery/alura-typer/public/principal.html
+++ b/oo_JQuery/alura-typer/public/principal.html
@@ -5,6 +5,7 @@
     <title>Alura Typer</title>
     <link rel="stylesheet" href="css/libs/materialize.min.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -12,13 +13,22 @@
         <p class="frase center">Lorem ipsum dolor sit amet?</p>
 
         <ul class="informacoes center">
-            <li> <span id="tamanho-frase"> 0 </span> palavras</li>
-            <li><span id="tempo-digitacao">10</span> segundos</li>
+
+            <li>
+                <i class="small material-icons icones">description</i>
+                <span id="tamanho-frase"> 0 </span> palavras
+            </li>
+            <li>
+                <i class="small material-icons icones">query_builder</i>
+                <span id="tempo-digitacao">4</span> segundos
+            </li>
         </ul>
 
         <textarea class="campo-digitacao" cols="40" rows="10"></textarea>
-        <button id="botao-reiniciar">Reiniciar Jogo</button>
-
+        <div class="botoes">
+            <a class="btn-floating btn-large waves-effect waves-light red" id="botao-reiniciar"><i class="material-icons">restore</i></a>
+        </div>
+        
         <ul class="center"> 
             <li> <span id="contador-caracteres"> 0 </span> caracteres</li>
             <li> <span id="contador-palavras"> 0 </span> palavras</li>
