--- a/oo_JQuery/alura-typer/public/principal.html
+++ b/oo_JQuery/alura-typer/public/principal.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1 class="center">Alura Typer</h1>
-        <p class="frase center">Lorem ipsum dolor sit amet?</p>
+        <p class="frase center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsa fugiat quasi possimus nemo, aut eligendi amet quo dolor est harum nesciunt sed libero impedit culpa, nobis ad voluptatem. Omnis.</p>
 
         <ul class="informacoes center">
 
