--- a/#ImersaoDev/Sale/index.html
+++ b/#ImersaoDev/Sale/index.html
@@ -15,16 +15,19 @@
         <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page-logo"
             alt="">
         <div class="page-subtitle">
-            <p>Acerte o valor do seu <span id="desconto-subtitle">desconto!</span> </p> 
-            <p>Digite um número de <span id="zero-subtitle">0</span> a <span id="cinquenta-subtitle">50</span>.</p> 
+            <p>Acerte o valor do seu <span id="desconto-subtitle">desconto!</span>Digite um número de <span id="zero-subtitle">0</span> a <span id="cinquenta-subtitle">50</span>.</p> 
         </div>
         <div>
             <input type="text" class="number-user">
+        </div>
+        <div>
+            <button class="boxNewText">Gerar desconto!</button>
         </div>
     </div>
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
     </a>
+    <script src="main.js"></script>
 </body>
 
 </html>
