--- a/#ImersaoDev/Sale/index.html
+++ b/#ImersaoDev/Sale/index.html
@@ -23,6 +23,9 @@
         <div>
             <button class="boxNewText">Gerar desconto!</button>
         </div>
+        <div>
+            <h2 id="res">0</h2>
+        </div>
     </div>
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
