--- a/oo_JQuery/alura-typer/public/principal.html
+++ b/oo_JQuery/alura-typer/public/principal.html
@@ -33,6 +33,37 @@
             <li> <span id="contador-caracteres"> 0 </span> caracteres</li>
             <li> <span id="contador-palavras"> 0 </span> palavras</li>
         </ul>
+
+        <section class="placar"> 
+            <h3 class="center">Placar</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Número de palavras</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Juliana</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>Jr</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>Boni</td>
+                        <td>50</td>
+                    </tr>
+                    <tr>
+                        <td>Ana</td>
+                        <td>100</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </section>
     </div>
     
      
