--- a/oo_JQuery/alura-typer/public/principal.html
+++ b/oo_JQuery/alura-typer/public/principal.html
@@ -41,16 +41,18 @@
                     <tr>
                         <th>Nome</th>
                         <th>Número de palavras</th>
+                        <th>Remover</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Juliana</td>
+                        <td>nome</td>
                         <td>10</td>
-                    </tr>
-                    <tr>
-                        <td>Jr</td>
-                        <td>5</td>
+                        <td>
+                            <a href="" class="botao-remover">
+                                <i class="small material-icons">delete</i>
+                            </a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
