--- a/oo_JQuery/alura-typer/public/principal.html
+++ b/oo_JQuery/alura-typer/public/principal.html
@@ -46,7 +46,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>nome</td>
+                        <td>user name</td>
                         <td>10</td>
                         <td>
                             <a href="" class="botao-remover">
