--- a/#ImersaoDev/Sale/index.html
+++ b/#ImersaoDev/Sale/index.html
@@ -23,8 +23,13 @@
         <div>
             <button class="boxNewText">Gerar desconto!</button>
         </div>
-        <div>
-            <h2 id="res">0</h2>
+        <div class="result">
+            <div>
+                <p>Número sorteado:<h2 id="res">0</h2></p>
+            </div>
+            <div>
+                <p id="resMessage"></p>
+            </div>
         </div>
     </div>
     <a href="https://alura.com.br/" target="_blank">
