--- a/oo_JQuery_2/alura-typer/public/principal.html
+++ b/oo_JQuery_2/alura-typer/public/principal.html
@@ -12,6 +12,10 @@
         <h1 class="center">Alura Typer</h1>
         <p class="frase center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
+        <div class="center">
+            <p class="erro">Ocorreu um erro, por favor, tente novamente.</p>
+        </div>
+
         <ul class="informacoes center">
             <li>
                 <i class="small material-icons icones">description</i>
