--- a/oo_JQuery_2/alura-typer/public/principal.html
+++ b/oo_JQuery_2/alura-typer/public/principal.html
@@ -13,6 +13,7 @@
         <p class="frase center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
         <div class="center">
+            <img src="img/spinner.gif" alt="Loading" id="spinner">
             <p class="erro">Ocorreu um erro, por favor, tente novamente.</p>
         </div>
 
