--- a/oo_JQuery_2/alura-typer/public/principal.html
+++ b/oo_JQuery_2/alura-typer/public/principal.html
@@ -43,7 +43,7 @@
             <a id="botao-frase-id" class="btn-floating btn-large waves-effect waves-light cyan">
                 <i class="material-icons">repeat_one</i>
             </a>
-            <input type="number" id="frase-id" min="0">;<!--inclusive previne n neg-->>
+            <input type="number" min="0" id="frase-id">
         </div>
 
         <ul class="center">
