--- a/oo_JQuery_2/alura-typer/public/principal.html
+++ b/oo_JQuery_2/alura-typer/public/principal.html
@@ -13,8 +13,8 @@
         <p class="frase center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
         <div class="center">
-            <img src="img/spinner.gif" alt="Loading" id="spinner">
-            <p class="erro">Ocorreu um erro, por favor, tente novamente.</p>
+            <img src="img/spinner.gif" alt="Spinner" id="spinner">
+            <p id="erro">Ocorreu um erro, por favor tente novamente</p>
         </div>
 
         <ul class="informacoes center">
@@ -35,15 +35,11 @@
                 <i class="material-icons">restore</i>
             </a>
             <a id="botao-placar" class="btn-floating btn-large waves-effect waves-light green">
-                <i class="material-icons">assessment</i>
+                <i class="material-icons">assignment</i>
             </a>
             <a id="botao-frase" class="btn-floating btn-large waves-effect waves-light blue">
                 <i class="material-icons">shuffle</i>
             </a>
-            <a id="botao-frase-id" class="btn-floating btn-large waves-effect waves-light cyan">
-                <i class="material-icons">repeat_one</i>
-            </a>
-            <input type="number" min="0" id="frase-id">
         </div>
 
         <ul class="center">
@@ -69,6 +65,7 @@
     </div>
 
     <script src="js/jquery.js"></script>
+    <script src="js/materialize.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/placar.js"></script>
     <script src="js/frase.js"></script>
