--- a/oo_JQuery_2/alura-typer/public/principal.html
+++ b/oo_JQuery_2/alura-typer/public/principal.html
@@ -40,6 +40,13 @@
             <a id="botao-frase" class="btn-floating btn-large waves-effect waves-light blue">
                 <i class="material-icons">shuffle</i>
             </a>
+            <a id="botao-frase-id" class="btn-floating btn-large waves-effect waves-light cyan">
+                <i class="material-icons">repeat_one</i>
+            </a>
+            <input type="number" min="0" id="frase-id">
+            <a id="botao-sync" class="btn-floating btn-large waves-effect waves-light yellow">
+                <i class="material-icons">swap_vert</i>
+            </a>
         </div>
 
         <ul class="center">
