--- a/oo_JQuery_2/alura-typer/public/principal.html
+++ b/oo_JQuery_2/alura-typer/public/principal.html
@@ -5,11 +5,23 @@
     <title>Alura Typer</title>
     <link rel="stylesheet" href="css/libs/materialize.min.css">
     <link rel="stylesheet" href="css/libs/google-fonts.css">
-    <link rel="stylesheet" href="css/estilos.css">
+       
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" href="css/estilos.css">   
+                    
 </head>
 <body>
     <div class="container">
         <h1 class="center">Alura Typer</h1>
+
+        <div class="slider">
+            <img src="img/slide1.png" alt="imagem-jogo">
+            <img src="img/slide2.png" alt="imagem-jogo">
+            <img src="img/slide3.png" alt="imagem-jogo">
+        </div>
+
+
         <p class="frase center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
         <div class="center">
@@ -76,6 +88,8 @@
     <script src="js/main.js"></script>
     <script src="js/placar.js"></script>
     <script src="js/frase.js"></script>
+    <script src="js/slider.js"></script>
+    <script  src="slick/slick.min.js"></script>
 
 </body>
 </html>
