--- a/oo_JQuery_2/alura-typer/public/principal.html
+++ b/oo_JQuery_2/alura-typer/public/principal.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/estilos.css">   
 
     <link rel="stylesheet" href="css/selectize.default.css">
+
+    <link rel="stylesheet" href="css/tooltipster.bundle.min.css">
                     
 </head>
 <body>
@@ -71,7 +73,7 @@
 
             </div>
 
-            <a id="botao-sync" class="btn-floating btn-large waves-effect waves-light yellow">
+            <a id="botao-sync" class="tooltip btn-floating btn-large waves-effect waves-light yellow" title="sincronizado com sucesso"> 
                 <i class="material-icons">swap_vert</i>
             </a>
         </div>
@@ -106,6 +108,7 @@
     <script src="js/slider.js"></script>
     <script  src="slick/slick.min.js"></script>
     <script src="js/selectize.js"></script>
+    <script src="js/tooltipster.bundle.min.js"></script>
 
 </body>
 </html>
