--- a/oo_ProjectConference/index.html
+++ b/oo_ProjectConference/index.html
@@ -7,16 +7,15 @@
     <title>Conference Page</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="header-menu">
-            <img src="img/destaque.jpeg" alt="">
             <nav>
                 <ul class="header-menu-options">
-                    <li><a href="" class="header-menu-op">Sobre</a></li>
-                    <li><a href="" class="header-menu-op">Palestrantes</a></li>
+                    <li class="header-menu-item"><a href="">Sobre</a></li>
+                    <li class="header-menu-item"><a href="">Palestrantes</a></li>
                 </ul>
             </nav>
         </div>
