--- a/oo_ProjectConference/index.html
+++ b/oo_ProjectConference/index.html
@@ -19,6 +19,15 @@
                 </ul>
             </nav>
         </div>
+        <div class="header-jumbotron">
+            <section class="panel-main">
+                <h1 class="jumbotron-title">Conference Page</h1>
+                <h2 class="jumbotron-subtitle">30 Dezembro | Rio</h2>
+            </section>
+            <section>
+                <a href="#" class="button">Inscreva-se</a>
+            </section>
+        </div>
     </header>  
 </body>
 </html>
