--- a/oo_ProjectConference/index.html
+++ b/oo_ProjectConference/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
     <header class="header">
@@ -24,10 +25,23 @@
                 <h1 class="jumbotron-title">Conference Page</h1>
                 <h2 class="jumbotron-subtitle">30 Dezembro | Rio</h2>
             </section>
-            <section>
+            <section class="panel-subscribe">
                 <a href="#" class="button">Inscreva-se</a>
             </section>
         </div>
-    </header>  
+    </header> 
+
+    <section class="panel-about">
+        <div class="container">
+            <h2 class="about-tittle">Muito conteúdo: do frontend ao backend</h2>
+            <h3 class="about-subtittle">30 de dezembro de 2021, Rio de Janeiro.</h3>
+
+            <div class="about-description">
+                <p>Com a AluraConf abordaremos o que há de novidade e conhecimentos essenciais a um desenvolver mobile.</p>
+                <p>É uma grande chance de ficar por dentro dos assuntos de Android, iOS, Web mobile, desenvolvimento híbrido, UX, além da parte backend com Rest, Microservices, e BigData. O desenvolvedor atualizado vai estar aqui.</p>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
