--- a/oo_ProjectConference/index.html
+++ b/oo_ProjectConference/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/speakers.css">
 </head>
 <body>
     <header class="header">
@@ -42,6 +43,25 @@
             </div>
         </div>
     </section>
-    
+
+    <section class="panel-speakers">
+        <div class="about-speakers">
+            <h2 class="speaker-tittle">Palestrantes</h2>
+            <h2 class="speaker-subtittle">Aprenda com palestrantes que são referência no mercado</h2>
+        </div>
+
+        <ul class="speakers">
+            <li class="speaker">
+                <figure class="speaker-portrait">
+                    <img src="" alt="">
+                    <figcaption class="speaker-name">Boni Bo</figcaption>
+                    <p class="speaker-bio">Desenvolvedor das galáxias</p>
+                </figure>
+                <p class="speaker-speach">To be or not to mean</p>
+            </li>
+        </ul>
+    </section>
+
+
 </body>
 </html>
